# Copyright Universitat Pompeu Fabra 2020-2023  https://www.compscience.org
# Distributed under the Apache 2.0 License.
# (See accompanying file README.md file or copy at https://opensource.org/license/apache-2-0/)

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["images*", "tests*"]

[project]
name = "promptsmiles"
version = "1.4"
authors = [
  { name="Morgan Thomas", email="morganthomas263@gmail.com" },
]
description = "A conveniant package to manipulate SMILES strings for iterative prompting with chemical language models."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "rdkit>=2022" # Let's just take a relatively recent cut-off for RDKit
]

[project.urls]
Homepage = "https://github.com/compsciencelab/PromptSMILES"
Issues = "https://github.com/compsciencelab/PromptSMILES/issues"