# Copyright Universitat Pompeu Fabra 2020-2023  https://www.compscience.org
# Distributed under the Apache 2.0 License.
# (See accompanying file README.md file or copy at https://opensource.org/license/apache-2-0/)

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["images*", "tests*"]

[project]
name = "promptsmiles"
version = "1.7.1"
authors = [
  { name="Morgan Thomas", email="morganthomas263@gmail.com" },
]
description = "A conveniant package to manipulate SMILES strings for iterative prompting with chemical language models."
keywords = ["SMILES", "Chemical language models", "De novo", "Constrained de novo", "chemistry", "drug design"]
readme = "README.md"
license = "APACHE-2.0"
requires-python = ">=3.7"
classifiers = [
  # Development status
  "Development Status :: 4 - Beta", 

  # Python
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",

  # Operating system
  "Operating System :: OS Independent",
]
dependencies = [
  "rdkit>=2022" # Let's just take a relatively recent cut-off for RDKit
]

[project.urls]
Homepage = "https://github.com/compsciencelab/PromptSMILES"
Issues = "https://github.com/compsciencelab/PromptSMILES/issues"
